Made changes to the CSS to try and fix display issues on mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,21 @@ ul > li {
 	width: 33.333%;
 	margin-right: 2vw;
 }
+
+@media only screen and (max-width: 768px) {
+	.container {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		text-align: center;
+		overflow: hidden;
+		margin-top: 20vh;
+		background-color: #242628;
+		border-style: solid;
+		border-color: #0f1011;
+		color: #fff;
+		font-size: 30px;
+		box-shadow: 8px 8px 8px #000000;
+		width: 100%;
+	}
+}
